feat: replace scripts with makefile; refactor further common text; some notes on PeYa experience

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,17 +2,17 @@
   "latex-workshop.latex.recipe.default": "first",
   "latex-workshop.latex.recipes": [
     {
-      "name": "builderEnglish",
+      "name": "builderCV",
       "tools": [
-        "builderEnglish"
+        "builderCV"
       ]
     },
   ],
   "latex-workshop.latex.tools": [
     {
-      "name": "builderEnglish",
-      "command": "./scripts/build-english.sh",
-      "args": []
+      "name": "builderCV",
+      "command": "make",
+      "args": ["all"]
     }
   ]
 }
